syntax = "proto3";

package zksync.config;

enum SetupLoadMode {
  FROM_DISK = 0;
  FROM_MEMORY = 1;
}

message FriProver {
    optional string setup_data_path = 1; // required; fs path?
    optional uint32 prometheus_port = 2; // required; u16
    optional uint32 max_attempts = 3; // required
    optional uint32 generation_timeout_in_secs = 4; // required; s
    optional bytes base_layer_circuit_ids_to_be_verified = 5; // required
    optional bytes recursive_layer_circuit_ids_to_be_verified = 6; // required
    optional SetupLoadMode setup_load_mode = 7; // required
    optional uint32 specialized_group_id = 8; // required; u8
    optional uint64 witness_vector_generator_thread_count = 9; // optional
    optional uint64 queue_capacity = 10; // required
    optional uint32 witness_vector_receiver_port = 11; // required; u16
    optional string zone_read_url = 12; // required
    optional bool shall_save_to_public_bucket = 13; // required
}
